# Todd

./: .gitignore  CITATION.cff  Readme.md  pyproject.toml
Todd/: __init__.py  basefilters.py  basescorers.py  best_beam_uncertainty.py  featuresfilters.py  featuresscorers.py  fif_detectors.py  filters.py  itfilters.py  itscorers.py  logitsprocessors.py  utills.py  utils.py
Todd/classifier_scorer/: __init__.py  classifier_scorer.py
Todd/query_based_scorers/: __init__.py  bart_scorer.py  bert_scorer.py  query_based_scorer.py  scoring_aggregators.py  scoring_functions.py  t5_scorer.py  t5_scorer_deprecated.py  xlmroberta_scorer.py  xlmroberta_trained_scorer.py
Todd/thirdparts/: __init__.py  datadepths.py
Todd/utils/: __init__.py  embeddings_extractors.py  ouput_processing.py  output_processing.py
examples/: Basic usages.ipynb
