[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Todd"
version = "0.0.1"
authors = [
  { name="Maxime Darrin", email="maxime.darrin@outlook.com" },
]
description = "An anomaly detection framework for text data built in pytorch for the huggingface transformers library."
readme = "Readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/icannos/todd/"
"Bug Tracker" = "https://github.com/icannos/todd/issues"